# SK2_PROJEKT_WISIELEC

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client  client_gui.py  main.cpp
server/: CMakeLists.txt  main.cpp  protocol.h  server  server.cpp  server.h  slowa.txt
